--- a/res/layout-hdpi/network_list_item.xml
+++ b/res/layout-hdpi/network_list_item.xml
@@ -14,11 +14,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */ -->
-<LinearLayout android:id="@+id/LinearLayout01"
-	android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal" android:layout_height="fill_parent">
-	<TextView android:id="@+id/message"
-		android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:textColor="#FFF" android:text="Bla bla bla bla bleh bleh, shit dick and fuck lol!"
-		android:gravity="center" android:textSize="14dip"/>
+<LinearLayout android:id="@+id/station_list_item_everything"
+				xmlns:android="http://schemas.android.com/apk/res/android"
+				android:orientation="horizontal"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"
+>
+				<TextView android:text="Dunnow Network" android:id="@+id/network_list_item_name" android:gravity="center"
+								android:layout_width="wrap_content" android:layout_height="fill_parent" 
+								android:textAppearance="?android:attr/textAppearanceLarge"
+								/>
 </LinearLayout>
