--- a/res/layout-ldpi/stations_list_item.xml
+++ b/res/layout-ldpi/stations_list_item.xml
@@ -28,18 +28,17 @@
 <LinearLayout android:id="@+id/station_list_item_main_layout"
 				xmlns:android="http://schemas.android.com/apk/res/android"
 				android:orientation="horizontal" 
-				android:layout_width="fill_parent" android:layout_height="50dip"
-				android:paddingTop="5dip" android:paddingLeft="5dip"
-				android:paddingBottom="5dip"
-				android:paddingRight="5dip"
+				android:layout_width="fill_parent" android:layout_height="40dip"
+				android:paddingTop="2dip" android:paddingLeft="2dip"
+				android:paddingBottom="2dip"
+				android:paddingRight="2dip"
 				>
 				
 				
 				
 				<TextView android:text="150m" android:id="@+id/station_list_item_distance"
 								android:layout_width="wrap_content" android:layout_height="fill_parent"
-								android:layout_marginRight="5dip" android:gravity="center"
-								 android:textSize="14dip"/>
+								android:layout_marginRight="5dip" android:gravity="center" android:textSize="12dip"/>
 				
 				<LinearLayout android:id="@+id/LinearLayout02"
 					android:layout_width="wrap_content" android:gravity="center" android:layout_height="wrap_content"
@@ -48,7 +47,7 @@
 					<TextView android:text="356 - Balcells" android:id="@+id/station_list_item_id"
 						android:layout_height="wrap_content" android:lines="1" android:layout_width="fill_parent"
 						
-						android:gravity="center" android:textSize="14dip"/>
+						android:gravity="center" android:textSize="12dip"/>
 
 					<LinearLayout android:id="@+id/LinearLayout03"
 						android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -57,12 +56,11 @@
 							android:layout_height="wrap_content" android:layout_width="fill_parent">
 							<TextView android:text="0 Bikes / 27 Spaces" android:id="@+id/station_list_item_ocupation"
 								android:gravity="center" android:layout_width="fill_parent"
-								android:layout_height="fill_parent" android:textSize="18dip" android:textColor="#FFFFFF"/>
+								android:layout_height="fill_parent" android:textColor="#FF0000" android:textSize="14dip"/>
 						</LinearLayout>
 					</LinearLayout>
 				</LinearLayout>
 				<TextView android:text="1 min" android:id="@+id/station_list_item_walking_time" android:gravity="center"
-								android:layout_width="wrap_content" android:layout_height="fill_parent" 
-								android:textSize="14dip"/>
+								android:layout_width="wrap_content" android:layout_height="fill_parent" android:textSize="12dip"/>
 			</LinearLayout>
 </LinearLayout>
