--- a/res/layout-mdpi/network_list.xml
+++ b/res/layout-mdpi/network_list.xml
@@ -14,11 +14,18 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */ -->
-<LinearLayout android:id="@+id/LinearLayout01"
-	android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal" android:layout_height="fill_parent">
-	<TextView android:id="@+id/message"
-		android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:textColor="#FFF" android:text="Bla bla bla bla bleh bleh, shit dick and fuck lol!"
-		android:gravity="center" android:textSize="14dip"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+    	>
+    
+    <ListView android:id="@+id/android:list"
+          android:layout_width="fill_parent"
+        	android:layout_height="fill_parent"
+        	android:scrollingCache="true"
+        	/>
+  	<TextView android:id="@+id/android:empty"
+          android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="No Networks!!"/>
 </LinearLayout>
