And now, its openVelib branch turn

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -29,7 +29,7 @@
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:orientation="vertical" android:gravity="bottom">
-		<net.homelinux.penecoptero.android.openbicing.app.StationSlidingDrawer android:id="@+id/drawer"
+		<net.homelinux.penecoptero.android.openvelib.app.StationSlidingDrawer android:id="@+id/drawer"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:handle="@+id/handle" android:content="@+id/content"
 			android:topOffset="0px" android:bottomOffset="0px">
@@ -45,16 +45,16 @@
 				android:id="@id/content" android:layout_width="fill_parent"
 				android:layout_height="wrap_content">
 			</FrameLayout>
-		</net.homelinux.penecoptero.android.openbicing.app.StationSlidingDrawer>
+		</net.homelinux.penecoptero.android.openvelib.app.StationSlidingDrawer>
 		<LinearLayout android:layout_width="fill_parent"
 			android:orientation="vertical" android:layout_height="wrap_content"
 			android:layout_margin="0px">
-			<net.homelinux.penecoptero.android.openbicing.app.InfoLayer android:id="@+id/info_layer"
+			<net.homelinux.penecoptero.android.openvelib.app.InfoLayer android:id="@+id/info_layer"
 				android:layout_margin="0px" android:layout_width="fill_parent"
 				android:layout_height="wrap_content" android:paddingTop="5dip"
 				android:paddingLeft="5dip" android:paddingBottom="5dip"
 				android:background="@drawable/fancy_gradient" android:paddingRight="5dip">
-			</net.homelinux.penecoptero.android.openbicing.app.InfoLayer>
+			</net.homelinux.penecoptero.android.openvelib.app.InfoLayer>
 		</LinearLayout>
 	</LinearLayout>
 	<ToggleButton android:id="@+id/mode_button"
