--- a/res/layout/infolayer.xml
+++ b/res/layout/infolayer.xml
@@ -9,9 +9,9 @@
 	<include android:id="@+id/include2" android:layout_width="fill_parent"
 		layout="@layout/bookmark_item" android:layout_height="wrap_content"></include>
 		</ViewFlipper>
-	<net.homelinux.penecoptero.android.openvelib.view.FlingTooltip
+	<net.homelinux.penecoptero.android.openbicing.view.FlingTooltip
 		android:id="@+id/FlingTooltip" android:layout_height="fill_parent"
 		android:layout_width="fill_parent">
-	</net.homelinux.penecoptero.android.openvelib.view.FlingTooltip>		
+	</net.homelinux.penecoptero.android.openbicing.view.FlingTooltip>		
 </FrameLayout>
 
